--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -117,6 +117,9 @@
     @apply border-border outline-ring/50;
   }
   body {
+  
+      font-family: 'Roboto', sans-serif;
+    
     @apply bg-background text-foreground;
   }
 }
